public class Main {
    public static void main(String[] args) {
        int a = 5;
        System.out.println("Hello World" + a);
    }
}
